I am not sure what has changed.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,6 +11,7 @@ modules:
 - hubcommand
 - hidestream
 - autosave
+- adminmode
 chat:
   default-format: '&7[Guest] &8<player>&f: <message>'
   formats:
