Add in sql bans system.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,7 +12,14 @@ modules:
 - hidestream
 - autosave
 - adminmode
+- bans
 chat:
   default-format: '&7[Guest] &8<player>&f: <message>'
   formats:
     testformat: '&4<player>&7: &c<message>'
+database:
+  hostname: localhost
+  port: 3306
+  username: butt
+  password: hole
+  database_name: Aurora
