--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: ${project.name}
 main: ${project.groupId}.${upload.dbo.slug}.${project.name}
 version: ${project.version}
 description: ${project.description}
+softdepend: [zPermissions]
 commands:
   ${upload.dbo.slug}:
     description: The central command for the ${project.name} plugin.
