Add all kinds of modules and stuff.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,6 +12,10 @@ modules:
 - autosave
 - adminmode
 - bans
+- loghoppers
+- menu
+- signlinks
+- punch
 server-name: null
 database:
   hostname: localhost
