--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -54,3 +54,9 @@ commands:
   kick:
     description: Kick command.
     usage: /<command> [args]
+  bc:
+    description: Block commands!
+    usage: /<command> [args]
+  s:
+    description: Server menu!
+    usage: /<command> [args]
