--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -25,8 +25,12 @@ modules:
 - blockcommands
 - maintenancemode
 - pingchat
+- tokens
+- announcer
 server-name: undefined
 pretty-server-name: Undefined
+command-shortcuts:
+  t: thru
 database:
   hostname: localhost
   port: 3306
