Add creative pass.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,6 +27,10 @@ modules:
 - pingchat
 - tokens
 - announcer
+- privatemessages
+- cloudmessages
+- broadcastfirstjoin
+- creativepass
 server-name: undefined
 pretty-server-name: Undefined
 command-shortcuts:
