Add Votifier module.

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,10 @@
 			<url>http://maven.tyrannyofheaven.org/</url>
 		</repository>
 		<repository>
+			<id>sacredlabyrinth</id>
+			<url>http://repo.sacredlabyrinth.net:8081/artifactory/remote-repos/</url>
+		</repository>
+		<repository>
 			<id>fanciful-mvn-repo</id>
 			<url>https://raw.github.com/mkremins/fanciful/mvn-repo/</url>
 			<snapshots>
@@ -128,6 +132,11 @@
 			<groupId>mkremins</groupId>
 			<artifactId>fanciful</artifactId>
 			<version>0.1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.vexsoftware</groupId>
+			<artifactId>votifier</artifactId>
+			<version>1.9</version>
 		</dependency>
 	</dependencies>
 </project>
