Part 1 of the chat update.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -32,6 +32,9 @@ modules:
 - broadcastfirstjoin
 - creativepass
 - votifier
+- farmworld
+- locate
+- tnt
 server-name: undefined
 pretty-server-name: Undefined
 command-shortcuts:
