More chat work..

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -35,6 +35,8 @@ modules:
 - farmworld
 - locate
 - tnt
+- infocommands
+- emptybroadcast
 server-name: undefined
 pretty-server-name: Undefined
 command-shortcuts:
