--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<name>Nova</name>
 	<description>The core star that powers AGN.</description>
 	<version>0.1</version>
@@ -84,33 +83,57 @@
 		<repository>
 			<id>bukkit-repo</id>
 			<url>http://repo.bukkit.org/content/groups/public/</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+			</releases>
 		</repository>
 		<repository>
 			<id>sk89q</id>
 			<url>http://maven.sk89q.com/repo/</url>
-		</repository>
-		<repository>
-			<id>tyrannyofheaven.org</id>
-			<url>http://maven.tyrannyofheaven.org/</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+			</releases>
 		</repository>
 		<repository>
 			<id>sacredlabyrinth</id>
 			<url>http://repo.sacredlabyrinth.net:8081/artifactory/remote-repos/</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+			</releases>
 		</repository>
 		<repository>
 			<id>fanciful-mvn-repo</id>
 			<url>https://raw.github.com/mkremins/fanciful/mvn-repo/</url>
 			<snapshots>
 				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
+				<updatePolicy>daily</updatePolicy>
 			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+			</releases>
 		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.7.9-R0.1-SNAPSHOT</version>
+			<version>1.7.10-R0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sk89q</groupId>
@@ -123,12 +146,6 @@
 			<version>5.5.8-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>org.tyrannyofheaven.bukkit</groupId>
-			<artifactId>zPermissions</artifactId>
-			<version>1.3-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<groupId>mkremins</groupId>
 			<artifactId>fanciful</artifactId>
 			<version>0.1.5</version>
@@ -137,6 +154,20 @@
 			<groupId>com.vexsoftware</groupId>
 			<artifactId>votifier</artifactId>
 			<version>1.9</version>
+		</dependency>
+		<dependency>
+			<groupId>com.gameaurora</groupId>
+			<artifactId>MilkyWay</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/plugins/MilkyWay.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>EffectLib</groupId>
+			<artifactId>EffectLib</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/plugins/EffectLib.jar</systemPath>
 		</dependency>
 	</dependencies>
 </project>
